// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox Matches the snapshot (dropdown) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 6rem;
  overflow-y: auto;
  padding: 4px 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c1:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c6 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c4:hover {
  border: 1px solid #006296;
}

.c9 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c9:hover {
  border: 1px solid #DBDEE1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.72;
  padding: 4px 8px 4px var(--spacing-4x);
  padding-left: 16px;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2:focus {
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c2[aria-selected='true'] .c3 > .c5 {
  display: block;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.72;
  padding: 4px 8px 4px 0;
  padding-left: 16px;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7:focus {
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c7[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c7[aria-selected='true'] .c3 > .c5 {
  display: block;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.72;
  padding: 4px 8px 4px var(--spacing-4x);
  padding-left: 16px;
}

.c8:hover {
  background-color: #FFFFFF;
}

.c8:focus {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c8[aria-selected='true'] .c3 > .c5 {
  display: block;
}

<div
  aria-activedescendant="uuid1_optionB"
  aria-multiselectable="false"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    id="uuid1"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionA"
      id="uuid1_optionA"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected="true"
      class="c7"
      data-testid="listitem-optionB"
      id="uuid1_optionB"
      role="option"
      selected=""
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionC"
      id="uuid1_optionC"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionD"
      id="uuid1_optionD"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option D
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c8"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="uuid1_optionDisabled"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c9"
        disabled=""
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option Disabled
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot (multiselect + checkIndicator) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 8rem;
  overflow-y: auto;
  padding: 4px 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c1:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c6 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c4:hover {
  border: 1px solid #006296;
}

.c9 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c9:hover {
  border: 1px solid #DBDEE1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.72;
  padding: 4px 8px 4px 0;
  padding-left: 16px;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2:focus {
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c2[aria-selected='true'] .c3 > .c5 {
  display: block;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.72;
  padding: 4px 8px 4px var(--spacing-4x);
  padding-left: 16px;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7:focus {
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c7[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c7[aria-selected='true'] .c3 > .c5 {
  display: block;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.72;
  padding: 4px 8px 4px var(--spacing-4x);
  padding-left: 16px;
}

.c8:hover {
  background-color: #FFFFFF;
}

.c8:focus {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c8[aria-selected='true'] .c3 > .c5 {
  display: block;
}

<div
  aria-multiselectable="true"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    id="uuid1"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="true"
      class="c2"
      data-testid="listitem-optionA"
      id="uuid1_optionA"
      role="option"
      selected=""
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected="false"
      class="c7"
      data-testid="listitem-optionB"
      id="uuid1_optionB"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected="true"
      class="c2"
      data-testid="listitem-optionC"
      id="uuid1_optionC"
      role="option"
      selected=""
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c7"
      data-testid="listitem-optionD"
      id="uuid1_optionD"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option D
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c8"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="uuid1_optionDisabled"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c9"
        disabled=""
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option Disabled
    </li>
  </ul>
</div>
`;

exports[`Listbox Matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: unset;
  width: unset;
}

.c1 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgb(0 0 0 / 19%);
  list-style-type: none;
  margin: 0;
  max-height: 6rem;
  overflow-y: auto;
  padding: 4px 0;
  position: relative;
  width: 100%;
  z-index: 1000;
}

.c1:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgb(0 0 0 / 19%);
  outline: none;
}

.c6 {
  color: #FFFFFF;
  display: none;
  height: 100%;
  left: 0;
  position: absolute;
  width: 100%;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c4:hover {
  border: 1px solid #006296;
}

.c9 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  left: 0;
  margin-right: var(--spacing-1x);
  position: relative;
  width: var(--size-1x);
}

.c9:hover {
  border: 1px solid #DBDEE1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.72;
  padding: 4px 8px 4px var(--spacing-4x);
  padding-left: 16px;
}

.c2:hover {
  background-color: #DBDEE1;
}

.c2:focus {
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c2[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c2[aria-selected='true'] .c3 > .c5 {
  display: block;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-semi-bold);
  line-height: 1.72;
  padding: 4px 8px 4px 0;
  padding-left: 16px;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c7:focus {
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c7[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c7[aria-selected='true'] .c3 > .c5 {
  display: block;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  line-height: 1.72;
  padding: 4px 8px 4px var(--spacing-4x);
  padding-left: 16px;
}

.c8:hover {
  background-color: #FFFFFF;
}

.c8:focus {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8[aria-selected='true'] .c3 {
  background-color: #006296;
  border: 1px solid #006296;
}

.c8[aria-selected='true'] .c3 > .c5 {
  display: block;
}

<div
  aria-activedescendant="uuid1_optionB"
  aria-multiselectable="false"
  class="c0"
  role="listbox"
  tabindex="-1"
>
  <ul
    class="c1"
    data-testid="listbox-list"
    id="uuid1"
    role="presentation"
    tabindex="0"
  >
    <li
      aria-label="Option A"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionA"
      id="uuid1_optionA"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option A
    </li>
    <li
      aria-label="Option B"
      aria-selected="true"
      class="c7"
      data-testid="listitem-optionB"
      id="uuid1_optionB"
      role="option"
      selected=""
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option B
    </li>
    <li
      aria-label="Option C"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionC"
      id="uuid1_optionC"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option C
    </li>
    <li
      aria-label="Option D"
      aria-selected="false"
      class="c2"
      data-testid="listitem-optionD"
      id="uuid1_optionD"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c4"
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option D
    </li>
    <li
      aria-disabled="true"
      aria-label="Option Disabled"
      aria-selected="false"
      class="c8"
      data-testid="listitem-optionDisabled"
      disabled=""
      id="uuid1_optionDisabled"
      role="option"
      tabindex="-1"
    >
      <span
        aria-hidden="true"
        class="c3 c9"
        disabled=""
      >
        <svg
          class="c5 c6"
          color="currentColor"
          focusable="false"
          height="24"
          width="24"
        />
      </span>
      Option Disabled
    </li>
  </ul>
</div>
`;
